--- a/index.html
+++ b/index.html
@@ -13,11 +13,17 @@
 <body>
   
 <div id="choropleth_map"></div>
+  <div id="bubble_chart"></div>
 
 <script type="text/javascript">
 
   var spec2 = "js/choropleth.vg.json";
   vegaEmbed('#choropleth_map', spec2).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+  
+  var spec3 = "js/bubble.vg.json";
+  vegaEmbed('#bubble_chart', spec3).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
